--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <br><br>
         <input type="color" id="selcolor" value="#ffe548" onchange="changeColor(this.value)">
 
-        <a href="https://github.com/ryddle/nixie-clock" id="github" target="_blank" style="float: right;margin-top: -25px;">
+        <a href="https://github.com/ryddle/nixie-radio" id="github" target="_blank" style="float: right;margin-top: -25px;">
             <div style="height: 32px;width: 32px;background: black;border-radius: 50%;">
                 <svg height="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" width="32" data-view-component="true" style="fill: white;">
                     <path
