--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
         height: 250px;
         border-radius: 50%;
         z-index: 10;
-        background: linear-gradient(45deg, rgba(224, 217, 146, 0.5186449579831933) 0%, rgba(224, 217, 146, 0) 35%, rgba(224, 217, 146, 0.4430147058823529) 70%, rgba(224, 217, 146, 0) 100%);
+        background: linear-gradient(45deg, rgba(224, 217, 146, 0.5186449579831933) 0%, rgba(224, 217, 146, 0) 35%, rgba(224, 217, 214, 0.4) 55%, rgba(224, 217, 146, 0.4430147058823529) 70%, rgba(224, 217, 146, 0) 100%);
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(0.6px);
-        -webkit-backdrop-filter: blur(2.4px);
+        backdrop-filter: blur(0.5px);
+        -webkit-backdrop-filter: blur(0.5px);
         border: 6px solid rgb(255 255 255 / 10%);
         filter: sepia(60%);"></div>
     </div>
