--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             background-color: #af9c7e;
             box-shadow: 1px 6px 10px 2px #0e0800;">
                 <canvas width="260" height="240" id="canvas"></canvas>
-                <span style="position: absolute;left: 100px;top: 215px;font-family: serif;font-size: 8px;color: black;">ryddle .inc 1880</span>
+                <span style="position: absolute;left: 100px;top: 215px;font-family: serif;font-size: 8px;color: black;">ryddle .co 1940</span>
             </div>
         </div>
 
