--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="sidebar" class="sidebar">
         <label for="loopColor" style="font-size: 14px; font-family: monospace; color: white;">Loop Color</label>
-        <input type="checkbox" name="loopColor" id="loopColor" onclick="loopColor()" checked style="font-size: 14px; font-family: monospace;" />
+        <input type="checkbox" name="loopColor" id="loopColor" onclick="loopColor()" style="font-size: 14px; font-family: monospace;" />
         <br><br>
         <input type="color" id="selcolor" value="#ffe548" onchange="changeColor(this.value)">
 
@@ -47,6 +47,7 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom"></div>
             </div>
             <div class="ones">
                 <p>0</p>
@@ -59,9 +60,11 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom" style="left: 143px;"></div>
             </div>
         </section>
         <p class="separator">:</p>
+        <div class="bottom" style="left: 225px; width: 30px; top: 132px;"></div>
         <section class="mins">
             <div class="tens">
                 <p>0</p>
@@ -74,6 +77,7 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom" style="left: 274px;"></div>
             </div>
             <div class="ones">
                 <p>0</p>
@@ -86,9 +90,11 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom"  style="left: 355px;"></div>
             </div>
         </section>
         <p class="separator">:</p>
+        <div class="bottom" style="left: 437px;width: 30px;top: 132px;"></div>
         <section class="secs">
             <div class="tens">
                 <p>0</p>
@@ -101,6 +107,7 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom" style="left: 486px;"></div>
             </div>
             <div class="ones">
                 <p>0</p>
@@ -113,6 +120,7 @@
                 <p>7</p>
                 <p>8</p>
                 <p>9</p>
+                <div class="bottom" style="left: 567px;"></div>
             </div>
         </section>
         <div class="clockbase"></div>
@@ -405,8 +413,6 @@
             return average;
         };
     }
-    //var getEnergy = getAudioEnergy();
-
 
     document.getElementById("timeMode").addEventListener("click", toggleTimeMode);
 
@@ -450,14 +456,15 @@
             document.getElementById("file").value = null;
 
         } else {
-            this.innerHTML = "<i class='fa-solid fa-power-off'></i>";
-            this.classList.add("active");
             document.getElementById("file").click();
         }
     });
 
     document.getElementById("file").addEventListener("input", function () {
         if (this.files && this.files[0]) {
+            document.getElementById("openMusic").innerHTML = "<i class='fa-solid fa-power-off'></i>";
+            document.getElementById("openMusic").classList.add("active");
+            
             for (let i = 0; i < this.files.length; i++) {
                 tracks.push(URL.createObjectURL(this.files[i]));
             }
