--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nixie Radio</title>
+    <link rel="icon" type="image/svg+xml" href="resources/favicon.svg">
     <link href="https://fonts.googleapis.com/css?family=Lato:100" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="main.css">
@@ -28,6 +29,12 @@
                         d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
                     </path>
                 </svg>
+            </div>
+        </a>
+
+        <a href="https://github.com/ryddle" target="_blank" style="position: fixed;left: 140px;bottom: 11px;">
+            <div style="height: 50px;width: 50px;">
+                <img src="resources/logo.png" height="50" width="50">
             </div>
         </a>
     </div>
@@ -162,7 +169,7 @@
         height: 220px;
         border-radius: 50%;
         background-color: #1d1100;
-        box-shadow: 0px 0px var(--intensity) 0px var(--ligth-color);
+        box-shadow: 0px 0px var(--intensity) var(--glow) var(--ligth-color);
         ">
             <div id="gauge_elm" style="
             position: absolute;
@@ -185,10 +192,10 @@
 
         <div id="gauge_glass" style="
         position: absolute;
-        left: 391px;
+        left: 390px;
         top: 251px;
-        width: 264px;
-        height: 200px;
+        width: 265px;
+        height: 202px;
         border-radius: unset;
         z-index: 10;
         background: linear-gradient(45deg, rgba(224, 217, 146, 0.5186449579831933) 0%, rgba(224, 217, 146, 0) 35%, rgba(224, 217, 214, 0.4) 55%, rgba(224, 217, 146, 0.4430147058823529) 70%, rgba(224, 217, 146, 0) 100%);
@@ -208,8 +215,8 @@
         width: 260px;
         height: 200px;
         border-radius: 50%;
-        z-index: 9;
-        box-shadow: inset 0px 0px var(--intensity) 0px var(--ligth-color);
+        z-index: 10;
+        box-shadow: inset 0px 0px var(--intensity) var(--glow) var(--ligth-color);
         backdrop-filter: blur(0.5px);
         -webkit-backdrop-filter: blur(0.5px);
         "></div>
@@ -745,6 +752,7 @@
             document.getElementById("openMusic").innerHTML = "<i class='fa-solid fa-power-off'></i>";
             document.getElementById("openMusic").classList.add("active");
 
+            setCssVar("--glow", "5px");
             setCssVar("--intensity", "15px");
 
             for (let i = 0; i < this.files.length; i++) {
